--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,14 @@
       "strict": true,
       "noImplicitReturns": false,
       "noFallthroughCasesInSwitch": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
       "moduleResolution": "node",
       "jsx": "react",
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "strictNullChecks": false,
+  
     }
   }
